<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupDetailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="imageDetailPoster,
            viewDetailPoster,
            textDetailTitle,
            textDetailGenre,
            ratingDetailVote,
            textDetailReleaseDate,
            textDetailOverviewLabel,
            textDetailOverview,
            buttonDetailFavorite,
            buttonDetailShare,
            imageDetailType"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageDetailPoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_description_detail_image_poster"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H, 2:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/image_not_found" />

        <View
            android:id="@+id/viewDetailPoster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_000000_transparent_angle_90"
            app:layout_constraintBottom_toBottomOf="@id/imageDetailPoster"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="@id/imageDetailPoster"
            app:layout_constraintStart_toStartOf="@id/imageDetailPoster"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageDetailType"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:background="@color/grey_272727"
            android:padding="@dimen/_4sdp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageDetailPoster"
            app:tint="@color/grey_979797"
            tools:srcCompat="@drawable/ic_content_movie" />

        <TextView
            android:id="@+id/textDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:ellipsize="end"
            android:fontFamily="@font/bold"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toTopOf="@id/textDetailGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/textDetailGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey_979797"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/ratingDetailVote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Comedy, Romance" />

        <RatingBar
            android:id="@+id/ratingDetailVote"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:numStars="5"
            android:theme="@style/Theme.MeowVie.RatingBar"
            app:layout_constraintBottom_toBottomOf="@id/imageDetailPoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:rating="8.5" />

        <TextView
            android:id="@+id/textDetailReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey_979797"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageDetailPoster"
            tools:text="Release : dd MMM yyyy" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="textDetailReleaseDate" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonDetailFavorite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@color/grey_2e2e2e"
            android:padding="@dimen/_8sdp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="H, 3:1"
            app:layout_constraintEnd_toStartOf="@id/buttonDetailShare"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierDetail"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonDetailShare"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/grey_2e2e2e"
            android:padding="@dimen/_8sdp"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="H, 3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/buttonDetailFavorite"
            app:layout_constraintTop_toBottomOf="@id/barrierDetail"
            app:srcCompat="@drawable/ic_baseline_share_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierDetailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="buttonDetailFavorite, buttonDetailShare" />

        <TextView
            android:id="@+id/textDetailOverviewLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/bold"
            android:text="@string/label_overview"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierDetailButton"
            tools:text="Overview" />

        <TextView
            android:id="@+id/textDetailOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailOverviewLabel"
            tools:maxLines="3"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/textDetailErrorMessage"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Error Message" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerDetailLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_duration="800"
            tools:visibility="gone">

            <include
                layout="@layout/shimmer_content_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>