<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/formExploreSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/grey_2e2e2e"
        android:fontFamily="@font/regular"
        android:hint="@string/hint_search_here"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_979797"
        android:textSize="@dimen/_14ssp"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/buttonExploreSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="1"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonExploreSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/grey_272727"
        android:scaleType="fitCenter"
        android:padding="@dimen/_4sdp"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/formExploreSearch"
        app:layout_constraintTop_toTopOf="@id/formExploreSearch"
        app:layout_constraintBottom_toBottomOf="@id/formExploreSearch"
        app:srcCompat="@drawable/ic_baseline_search_24"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listExplore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formExploreSearch"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textExploreErrorMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formExploreSearch"
        tools:text="Error Message" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerExploreDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formExploreSearch"
        app:shimmer_duration="800">

        <include
            layout="@layout/shimmer_item_content_banner_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>